--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+  <div class="loader-container active">
+    <span class="loader"></span>
+    loading...
+  </div>
   <header class="header">
     <div class="container">
       <div class="row space-between align-center">
